# VoMP

./: .gitignore  ATTRIBUTIONS.md  CONTRIBUTING.md  README.md  README_train.md  demo.py  environment.yml  install_env.sh  pixi.toml  pyproject.toml  requirements_dev.txt  requirements_full.txt  requirements_inference.txt  train_geometry_encoder.py  train_material_vae.py
configs/materials/: inference.json
configs/sim/: armchair_and_orange.json  falling_armchair.json  falling_bar_stool.json  falling_birch.json  falling_oranges.json  falling_sphere_soft.json  zag_and_falling_orange.json  zag_and_falling_oranges.json
dataset_toolkits/: build_metadata.py  extract_feature.py  utils.py
dataset_toolkits/abo/: ABO500.py  build_metadata.py  extract_feature.py  render.py  voxelize.py
dataset_toolkits/blender_script/: render.py
dataset_toolkits/datasets/: ABO.py  __init__.py  allmats.py  simready.py
dataset_toolkits/latent_space/: analyze_data_distribution.py  make_csv.py
dataset_toolkits/material_objects/: render_usd.py  voxelize.py
extensions/vox2seq/: benchmark.py  setup.py  test.py
gradio/: README.md  app.py  requirements.txt
gradio/examples/: dog.ply
scripts/: data_stats.py  evaluate_geometry_encoder.py  material_hist.py  optimize_prompt.py  viewer.py
simulation/: libuipc.md  simplicits.md
simulation/newton/: cube_high_E.npz  cube_low_E.npz  mesh_falling_sim.py
simulation/warp.fem/: README.md  drop_tetmesh.py  material_loader.py
vomp/datasets/: __init__.py  components.py  sparse_voxel_materials.py
weights/: download.sh  download_vomp_weights.sh
(+141 files in other folders)
