[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vomp"
version = "0.1.0"
description = "VoMP: Predicting Volumetric Mechanical Properties"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vomp*", "dataset_toolkits*"]
